--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,6 +3,8 @@ server:
   servlet:
     path: /aqi
 spring:
+  mvc:
+      static-path-pattern: /static/**
   #数据库连接配置
   datasource:
     username: root
