update : 新增月份统计和表格分析

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -37,3 +37,6 @@ spring:
 redisson:
   address: redis://39.105.231.100:6379
   password: app_talk@123
+
+ip:
+  path: D:\iciba\aqi\src\main\resources\my.datx
