--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -34,6 +34,24 @@ spring:
         max-concurrency: 5
         # 手动签收ACK
         acknowledge-mode: manual
+  # Redis数据库索引（默认为0）
+  redis:
+    database: 0
+    # Redis服务器地址
+    #    host: 172.26.66.114
+    host: 39.105.231.100
+    # Redis服务器连接端口
+    port: 6379
+    # Redis服务器连接密码（默认为空）
+    password: app_talk@123
+    lettuce:
+      pool:
+        max-wait: -1ms # 连接池最大阻塞等待时间（使用负值表示没有限制）
+        min-idle: 0 # 连接池中的最小空闲连接
+        max-idle: 10 # 连接池中的最大空闲连接
+        max-active: 200 # 连接池最大连接数（使用负值表示没有限制）
+        shutdown-timeout: 2000ms
+      timeout: 5000ms
 redisson:
   address: redis://39.105.231.100:6379
   password: app_talk@123
