--- a/pom.xml
+++ b/pom.xml
@@ -87,11 +87,11 @@
             <version>2.6.2</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.CityQ</groupId>
-            <artifactId>Cityq_Common_Api</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.CityQ</groupId>-->
+            <!--<artifactId>Cityq_Common_Api</artifactId>-->
+            <!--<version>1.0-SNAPSHOT</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>com.alibaba</groupId>
