--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,16 @@
             <artifactId>joda-time</artifactId>
             <version>2.10.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>aliyun-java-sdk-core</artifactId>
+            <version>4.5.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.aliyun.oss</groupId>
+            <artifactId>aliyun-sdk-oss</artifactId>
+            <version>3.10.2</version>
+        </dependency>
 
 <!--        &lt;!&ndash; https://mvnrepository.com/artifact/ru.yandex.clickhouse/clickhouse-jdbc &ndash;&gt;-->
 <!--        <dependency>-->
